--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         #DavidStudiosLink {
             position: relative;
             bottom: 50px;
-            left: 550px;
+            left: 515px;
         }
        #DavidTable {
             padding: 60px;
@@ -58,8 +58,29 @@
                 left: 900px;
                 bottom: 500px;
          }
+         #HR{
+            text-align: center;
+            font: 60px comic sans ms;
+            color: rgb(255, 0, 0);
+            position: relative;
+            bottom: 450px;
+         }
+            #hrbody{
+                text-align: center;
+                font: 40px comic sans ms;
+                color: rgb(102, 255, 0);
+                position: relative;
+                bottom: 500px;
+            }
 
 
+            #hrbody2{
+                text-align: center;
+                font: 20px comic sans ms;
+                color: rgb(185, 25, 25);
+                position: relative;
+                bottom: 500px;
+            }
     </style>
 </head>
 <body>
@@ -92,10 +113,13 @@
     <br>
     <br>
     <iframe id="HogRider360" width="560" height="315" src="https://www.youtube.com/embed/yVLfEHXQk08" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <p id="HR"> Hog Rider 360 </p>
+    <p id="hrbody"> Hog Rider 360, by Supercell </p>
+    <p id="hrbody2"> Hog Rider 360 is a 3d video by SUPERCELL of the HOG RIDER from Clash Of Clans!!!</p>
 
 
     <p id="horse" style="font-size:100px">&#128052;</p>
 
 </body>
 </html>
+
