--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="video-center-section">
         <div class="video-center">
-            <iframe id="HogRider360" width="560" height="315" src="https://www.youtube.com/embed/yVLfEHXQk08" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="HogRider360" width="560" height="315" src="https://www.youtube.com/embed/yVLfEHXQk08&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <p id="HR"> Hog Rider 360 </p>
         
