--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DavidStudios Fan Club</title>
-    <link rel="icon" type="image/x-icon" href="avery.png">
+    <link rel="icon" type="image/x-icon" href="img/avery.png">
     <style>
         body {
-            background-image: url('downlad.png');
+            background-image: url('img/downlad.png');
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -89,7 +89,7 @@
     <h1> This is my first web page </h1>
     <b> Mitchell Chan Reynolds &#128049 </b>
     <br>
-    <img src="c:\Users\vanbcohe15\Downloads\yeahimman.png" alt="Batman without the bat ears">
+    <img src="img/yeahimman.png" alt="Batman without the bat ears">
     <img id="beserker" src="img/beserker.png" alt="Clash Royale Berserker">
     <br>
     <b> this is Man </b>
