--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             cursor: pointer;
             transition: background 1s;
             font: 32px comic sans ms;
-            
+            margin-left: auto;
+            margin-right: auto;
         }
         button:hover {
             background-color: rgb(35, 12, 245);
@@ -56,11 +57,7 @@
         #HogRider360 {
             position: static;
         }
-        #DavidStudiosLink {
-            position: relative;
-            bottom: 50px;
-            left: 515px;
-        }
+       
        #DavidTable {
             padding: 60px;
             position: relative;
