--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             cursor: pointer;
             transition: background 1s;
             font: 32px comic sans ms;
-            margin-left: auto;
-            margin-right: auto;
+            
         }
         button:hover {
             background-color: rgb(35, 12, 245);
@@ -43,6 +42,13 @@
             flex-direction: column;
             align-items: center;
             margin-top: 20px;
+        }
+
+        .center-btn {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 20px 0;
         }
 
 
@@ -91,11 +97,12 @@
     <br>
     <b> this is Man </b>
     <br>
+    <div class="center-btn">
     <a id="DavidStudiosLink" href="https://itzdavidstudios.github.io/about.html">
         <button id="DavidButton" type="button">DavidStudios</button>
 
     </a>
-
+    </div>  
 
     <div class="video-center-section">
         <div class="video-center">
