--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             .hrbody{
             text-align: center;
             font: 20px comic sans ms;
+            outline: 2px solid rgb(255, 0, 0);
             }
     </style>
 </head>
