--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
             font: 20px comic sans ms;
             outline: 2px solid rgb(255, 0, 0);
             }
+
+
+
+
+            #test {
+                text-align: center;
+            }
     </style>
 </head>
 <body>
@@ -128,8 +135,8 @@
     </table>
 
   
-<br><br><br><br>
-<a href="page2.html">https://davidfanclub.com/secondwebpage.html</a>
+
+<a href="page2.html" id="test">https://davidfanclub.com/secondwebpage.html</a>
 
     
 
