--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 
 
             #test {
-                text-align: center;
+                position: absolute;
+                margin-left: auto;
+                margin-right: auto;
             }
     </style>
 </head>
@@ -136,7 +138,7 @@
 
   
 
-<a href="page2.html" id="test">https://davidfanclub.com/secondwebpage.html</a>
+<a href="https://davidfanclub.com/secondwebpage.html" id="test">All my work!</a>
 
     
 
