--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
             #test {
-                position: absolute;
+                position: relative;
                 margin-left: auto;
                 margin-right: auto;
             }
