--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
 
             #test {
                 position: relative;
-                margin-left: auto;
-                margin-right: auto;
+                left: 700px;
             }
     </style>
 </head>
