--- a/secondwebpage.html
+++ b/secondwebpage.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+<style>
+    body {
+        background-image: url('img/klent.png');
+    }
+
+    #WorkHeader {
+        text-align: center;
+        font: 50px comic sans ms;
+        color: rgb(255, 0, 0);
+        text-shadow: 2px 2px 4px rgb(0, 0, 0);
+        border: 5px solid rgb(0, 0, 0);
+        border-radius: 10px;
+        background-color: rgb(255, 255, 255);
+        margin: 20px;
+        padding: 10px;
+    }
+</style>
+
+
+
+
+
+
+
+
+
+
+
 </head>
 <body>
     
-test
+<h1 id="WorkHeader">This is the second webpage</h1>
+<a href="index.html">Go back to the first webpage</a>
 
 
 </body>
