--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
             #test {
                 position: relative;
                 left: 700px;
+                text-decoration: none;
+                font: 32px comic sans ms;
+                color: rgb(255, 0, 0);
+                border: 4px solid rgb(0, 0, 0);
+                border-radius: 8px;
+                background-color: rgb(255, 255, 255);
+                padding: 10px;
+                box-shadow: 2px 2px 5px rgb(0, 0, 0);
+                transition: background-color 0.5s, color 0.5s;
+                
             }
     </style>
 </head>
