--- a/schoolwork.html
+++ b/schoolwork.html
@@ -55,6 +55,7 @@
 <h1 id="WorkHeader">This is the second webpage</h1>
 <a href="index.html" id="home">Go back to the first webpage</a>
 
+<a href="WebProjects/Week3/3.4/Calculator.html" id="home">Go to the calculator webpage</a>
 
 </body>
 </html>
