--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -14,12 +14,13 @@
 
 <br>
 
-<button onclick="addNumbers()">Add</button>
+<button onclick="add()">Add</button>
+<button onclick="subtract()">Subtract</button>
 
 
 <script>
 
-    function addNumbers() {
+    function add() {
         var number1 = parseFloat(document.getElementById('num1').value);
         var number2 = parseFloat(document.getElementById('num2').value);
         if (isNaN(number1) || isNaN(number2)) {
@@ -30,7 +31,16 @@
         alert("The sum is: " + sum);
     }
 
- 
+    function subtract(){
+        var number1 = parseFloat(document.getElementById('num1').value);
+        var number2 = parseFloat(document.getElementById('num2').value);
+        if (isNaN(number1) || isNaN(number2)) {
+            alert("Please enter valid numbers in both fields.");
+            return;
+        }
+        var difference = number1 - number2;
+        alert("The difference is: " + difference);
+    }
 
 
 </script>
