--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -8,7 +8,11 @@
     <style>
         
         body {
-            background-image: url('img/yakub.png');
+            background-image: url('../../../img/yakub.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100vh;
         }
 
     </style>
