--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -15,6 +15,19 @@
             height: 100vh;
         }
 
+
+        #calculator {
+            border: 6px solid rgb(204, 17, 211);
+            border-radius: 8px; /* optional: rounded corners */
+            box-shadow: 0 4px 8px rgb(0, 0, 0);
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            margin-top: 20px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8); /* semi-transparent background */
+        }
+
     </style>
 
 
@@ -24,7 +37,7 @@
 <body>
     
 
-
+<div id="calculator">
 <input type="text" id="num1" placeholder="Enter first number">
 <input type="text" id="num2" placeholder="Enter second number">
 
@@ -38,7 +51,11 @@
 <button onclick="subtract()">Subtract</button>
 <button onclick="divide()">Divide</button>
 <button onclick="multiply()">Multiply</button>
+
+</div>
+
 <br>
+<br><br><br>
 
 <h1> Quadratic Formula </h1>
 
