--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -18,14 +18,14 @@
 
         #calculator {
             border: 6px solid rgb(204, 17, 211);
-            border-radius: 8px; /* optional: rounded corners */
+            border-radius: 8px; 
             box-shadow: 0 4px 8px rgb(0, 0, 0);
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
             margin-top: 20px;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8); /* semi-transparent background */
+            background-color: rgba(255, 255, 255, 0.2); 
         }
 
     </style>
