--- a/schoolwork.html
+++ b/schoolwork.html
@@ -56,6 +56,6 @@
 <a href="index.html" id="home">Go back to the first webpage</a>
 
 <a href="WebProjects/Week3/3.4/Calculator.html" id="home">Go to the calculator webpage</a>
-
+<a href="WebProjects/Week4/4.2/4-2.html" id="home">Airfryer fan club</a>
 </body>
 </html>
