--- a/schoolwork.html
+++ b/schoolwork.html
@@ -37,6 +37,20 @@
         transition: background-color 0.5s, color 0.5s;
     }
 
+    #orkin{
+        position: relative;
+        left: 700px;
+        text-decoration: none;
+        font: 32px comic sans ms;
+        color: rgb(255, 0, 0);
+        border: 4px solid rgb(0, 0, 0);
+        border-radius: 8px;
+        background-color: rgb(255, 255, 255);
+        padding: 10px;
+        box-shadow: 2px 2px 5px rgb(0, 0, 0);
+        transition: background-color 0.5s, color 0.5s;
+    }
+
 </style>
 
 
@@ -56,6 +70,6 @@
 <a href="index.html" id="home">Go back to the first webpage</a>
 
 <a href="WebProjects/Week3/3.4/Calculator.html" id="home">Go to the calculator webpage</a>
-<a href="WebProjects/Week4/4.2/4-2.html" id="home">Airfryer fan club</a>
+<a href="WebProjects/Week4/4.2/4-2.html" id="orkin">Airfryer fan club</a>
 </body>
 </html>
