--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -112,6 +112,9 @@
         alert("The product is: " + product);
     }
 
+
+// Quadratic Formula
+
     function quadraticcalculator(a, b, c) {
         var inside = b * b - 4 * a * c;
         if (inside < 0) {
@@ -124,8 +127,17 @@
     }
 
     function calculateRoots() {
-        
+        var a = parseFloat(document.getElementById('a').value);
+        var b = parseFloat(document.getElementById('b').value);
+        var c = parseFloat(document.getElementById('c').value);
+        if (isNaN(a) || isNaN(b) || isNaN(c)) {
+            alert("Please enter valid numbers for a, b, and c.");
+            return;
+        }
+        var result = quadraticcalculator(a, b, c);
+        alert(result);
     }
+    
 
 
 </script>
