--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -17,7 +17,8 @@
 
 
         #calculator {
-            border: 6px solid rgb(204, 17, 211);
+            border: 2px solid transparent;
+            border-image: url('../../../img/downlad.png') 30 stretch;
             border-radius: 8px; 
             box-shadow: 0 4px 8px rgb(0, 0, 0);
             position: absolute;
