--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -34,30 +34,17 @@
             left: 50%;
             transform: translateX(-50%);
             position: absolute;
+            margin-top: 300px;
         }
 
-        input {
+
+        .qfi {
             margin: 10px;
             padding: 10px;
             border-radius: 5px;
             border: 1px solid #ccc;
             font-size: 16px;
         }
-        button {
-            margin: 10px;
-            padding: 10px 20px;
-            border-radius: 5px;
-            border: none;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        
-        
 
 
     </style>
