--- a/WebProjects/Week4/4.2/4-2.html
+++ b/WebProjects/Week4/4.2/4-2.html
@@ -16,7 +16,7 @@
             pointer-events: none;
             max-width: 500vw;
             max-height: 500vh;
-            object-fit: contain;
+            object-fit: cover;
         }
         #overlay-img.show {
             transform: translate(-50%, -50%) scale(1);
