--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -37,7 +37,14 @@
             margin-top: 100px;
         }
 
-
+        .qfi {
+            margin: 5px;
+            padding: 5px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            width: 80px;
+            margin-top: 150px;  
+        }
    
 
     </style>
