--- a/WebProjects/Week3/3.4/Calculator.html
+++ b/WebProjects/Week3/3.4/Calculator.html
@@ -37,15 +37,7 @@
             margin-top: 100px;
         }
 
-        .qfi {
-            margin: 5px;
-            padding: 5px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            width: 80px;
-            margin-top: 150px;  
-        }
-   
+       
 
     </style>
 
@@ -79,9 +71,9 @@
 <h1 id="quadratic-formula"> Quadratic Formula </h1>
 
 
-<input type="text" class="qfi" placeholder="Enter a">
-<input type="text" class="qfi" placeholder="Enter b">
-<input type="text" class="qfi" placeholder="Enter c">
+<input type="text" id="a" placeholder="Enter a">
+<input type="text" id="b" placeholder="Enter b">
+<input type="text" id="c" placeholder="Enter c">
 <button onclick="calculateRoots()">Calculate Roots</button>
 
 <script>
