--- a/WebProjects/Week3/3.2/3-2.html
+++ b/WebProjects/Week3/3.2/3-2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-<h1> Hello World!</h1>
-
-<p> this is mitchellurguy!</p>
-
-<img src="img/avery.png" alt="Avery the dog" width="300" height="200">
-
+    <h1> this is the second page</h1>
+    <a href="../3.1/3-1.html">Go to main page</a>
 </body>
 </html>
