--- a/WebProjects/Week4/4.4/4-4.html
+++ b/WebProjects/Week4/4.4/4-4.html
@@ -7,11 +7,7 @@
 </head>
 <body>
     
-<h1> Hello World!</h1>
-
-<p> this is mitchellurguy!</p>
-
-<img src="img/avery.png" alt="Avery the dog" width="300" height="200">
+<p> this day was sorting and emailing you</p>
 
 </body>
 </html>
