--- a/WebProjects/Week2/2.5/2-5.html
+++ b/WebProjects/Week2/2.5/2-5.html
@@ -55,8 +55,8 @@
   <li>
     <a href="#">Menu</a>
     <ul>
-      <li><a href="https://en.wikipedia.org/wiki/Hatsune_Miku"><img src="img/mikumikubeam.png" alt="Miku Miku Beam"></a></li>
-      <li><a href="https://www.thepeterboroughexaminer.com/news/its-toddler-time/article_c003c3b5-4774-5af5-bc4d-07b12ba10a33.html"><img src="img/mitchellurguy.png" alt="Mitchell Ur Guy"></a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Hatsune_Miku"><img src="../../../img/mikumikubeam.png" alt="Miku Miku Beam"></a></li>
+      <li><a href="https://www.thepeterboroughexaminer.com/news/its-toddler-time/article_c003c3b5-4774-5af5-bc4d-07b12ba10a33.html"><img src="../../../img/mitchellurguy.png" alt="Mitchell Ur Guy"></a></li>
       <li><a href="#">3</a></li>
     </ul>
   </li>
