--- a/schoolwork.html
+++ b/schoolwork.html
@@ -171,9 +171,17 @@
         <a href="WebProjects/Week4/4.2/4-2.html">Day 2</a>
         <a href="WebProjects/Week4/4.3/4-3.html">Day 3</a>
         <a href="WebProjects/Week4/4.4/4-4.html">Day 4</a>
-       
       </div>
     </div>
+    <div class="sub-dropdown">
+      <button class="sub-dropbtn">Week 5</button>
+      <div class="sub-dropdown-content">
+        <a href="WebProjects/Week5/5-1.html">Day 1</a>
+        <a href="WebProjects/Week5/5-2.html">Day 2</a>
+        <a href="WebProjects/Week5/5-3.html">Day 3</a>
+        <a href="WebProjects/Week5/5-4.html">Day 4</a>
+        <a href="WebProjects/Week5/5-5.html">Day 5</a>
+      </div>
   </div>
 </div>
 
