--- a/WebProjects/Week5/5-2.html
+++ b/WebProjects/Week5/5-2.html
@@ -4,33 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    
-//grader
 
-<script>
-let grade = prompt("Enter your grade:");
-grade = parseFloat(grade);
-if (grade >= 90) {
-    alert("Your grade is A");
-} else if (grade >= 80) {
-    alert("Your grade is B");
-} else if (grade >= 70) {
-    alert("Your grade is C");
-} else if (grade >= 60) {
-    alert("Your grade is D");
-} else {
-    alert("Your grade is F");
+<style>
+
+#scoreInput {
+    width: 200px;
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 16px;
+}
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+h1 {
+    font-family: Arial, sans-serif;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #f0f0f0;
 }
 
 
+</style>
+
+
+</head>
+
+<body>
+    <h1>Grade Calculator</h1>
+
+<input type="number" id="scoreInput" placeholder="Enter your score">
+<button onclick="showGrade()">Get Grade</button>
+
+<script>
+    function showGrade() {
+        const score = document.getElementById('scoreInput').value;
+        const grade = grade(score);
+        alert("Your grade is " + grade);
+    }
+
+
+        // grader
+        function grade(score) {
+    if (score >= 90) {
+        return 'A';
+    } else if (score >= 80) {
+        return 'B';
+    } else if (score >= 70) {
+        return 'C';
+    } else if (score >= 60) {
+        return 'D';
+    } else {
+        return 'F';
+    }
+}
+
 </script>
-
-
-
-
-
 
 </body>
 </html>
