--- a/WebProjects/Week5/5-2.html
+++ b/WebProjects/Week5/5-2.html
@@ -67,5 +67,9 @@ body {
 
 </script>
 
+<br><br><br>
+<h1> Return to Selection </h1>
+<a href="../../schoolwork.html"> Main Page </a>
+
 </body>
 </html>
