--- a/WebProjects/Week5/5-2.html
+++ b/WebProjects/Week5/5-2.html
@@ -43,20 +43,18 @@
     <script>
         // Grader function
         function grade(score) {
-            if (score >= 90) {
-                return 'A';
+            if (score > 100 || score < 0) {
+                return 'Invalid score';
             } else if (score === 67) {
                 return 'Six Seven!';
-            } else if (score > 100) {
-                return 'Invalid score';
-            }else if (score >= 80) {
+            } else if (score >= 90) {
+                return 'A';
+            } else if (score >= 80) {
                 return 'B';
             } else if (score >= 70) {
                 return 'C';
             } else if (score >= 60) {
                 return 'D';
-            } else if (score < 0) {
-                return 'Invalid score';
             } else {
                 return 'F';
             }
