--- a/WebProjects/Week6/6-2.html
+++ b/WebProjects/Week6/6-2.html
@@ -64,6 +64,10 @@ body {
 
 <button onclick="calculatePrice()">Calculate Price</button>
 
+
+
+<br>
+<a href="../../schoolwork.html">Back to Home</a>
   <script>
 
     function calculatePrice() {
