--- a/schoolwork.html
+++ b/schoolwork.html
@@ -183,6 +183,7 @@
         <a href="WebProjects/Week5/5-5.html">Day 5</a>
       </div>
       <div class="sub-dropdown-content">
+        <button class="sub-dropbtn">Week 6</button>
         <a href="WebProjects/Week6/6-1.html">Day 1</a>
         <a href="WebProjects/Week6/6-2.html">Day 2</a>
         <a href="WebProjects/Week6/6-3.html">Day 3</a>
