--- a/schoolwork.html
+++ b/schoolwork.html
@@ -182,6 +182,7 @@
         <a href="WebProjects/Week5/5-4.html">Day 4</a>
         <a href="WebProjects/Week5/5-5.html">Day 5</a>
       </div>
+    </div>
     <div class="sub-dropdown">
       <button class="sub-dropbtn">Week 6</button>
       <div class="sub-dropdown-content">
