--- a/schoolwork.html
+++ b/schoolwork.html
@@ -186,7 +186,7 @@
     <div class="sub-dropdown">
       <button class="sub-dropbtn">Week 6</button>
       <div class="sub-dropdown-content">
-        
+        <a href="WebProjects/Week6/6-1.html">Day 1</a>
         <a href="WebProjects/Week6/6-2.html">Day 2</a>
         <a href="WebProjects/Week6/6-3.html">Day 3</a>
         <a href="WebProjects/Week6/6-4.html">Day 4</a>
