--- a/WebProjects/Week7/7-3Tally.html
+++ b/WebProjects/Week7/7-3Tally.html
@@ -2,59 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Random Tally & Averages</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 30px;
+            background-color: #f0f0f0;
+        }
+        #averageList {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-   <h1>Tally Counter</h1>
-
+    <h1>Random Tally Average Calculator</h1>
     <button id="tallyButton">Calculate Average</button>
-    <h2>Average of Random Numbers</h2>
-   <p id="tallyDisplay">0</p>
-
-    <h2>Last 5 Averages</h2>
+    <div id="tallyDisplay"></div>
+    <h2>Last 5 Averages:</h2>
     <ul id="averageList"></ul>
 
+    <script>
+        const averages = [];
 
+        document.getElementById("tallyButton").addEventListener("click", function() {
+            let tally = 0;
+            const iterations = 10;
 
-<!-- Write a program that goes through a loop 10 times.
-Each time through the loop generate a random whole number between 1-10.
-Maintain a running total or tally of the generated random numbers.
-After the loop is complete, divide the tally by the number of times through the loop and display the result as an average.
-Also make it display the last 5 averages calculated.
---> 
+            for (let i = 0; i < iterations; i++) {
+                const randomNum = Math.floor(Math.random() * 10) + 1;
+                tally += randomNum;
+            }
 
-<script>
-    const averages = [];
-    document.getElementById("tallyButton").addEventListener("click", function() {
-        let tally = 0;
-        const iterations = 10;
+            const average = tally / iterations;
+            document.getElementById("tallyDisplay").textContent = "Average: " + average.toFixed(2);
 
-        for (let i = 0; i < iterations; i++) {
-            const randomNum = Math.floor(Math.random() * 10) + 1;
-            tally += randomNum;
-        }
+            // Store and display last 5 averages
+            averages.push(average);
+            if (averages.length > 5) {
+                averages.shift();
+            }
 
-        const average = tally / iterations;
-        document.getElementById("tallyDisplay").textContent = "Average: " + average.toFixed(2);
-
-     
-        averages.push(average);
-        if (averages.length > 5) {
-            averages.shift(); 
-        }
-
-       
-        const averageList = document.getElementById("averageList");
-        averageList.innerHTML = ""; 
-
-        for (let i = 0; i < averages.length; i++) {
-            const listItem = document.createElement("li");
-            listItem.textContent = "Average " + (i + 1) + ": " + averages[i].toFixed(2);
-            averageList.appendChild(listItem);
-        }
-    });
-</script>
-
+            const averageList = document.getElementById("averageList");
+            averageList.innerHTML = "";
+            averages.forEach((avg, idx) => {
+                const li = document.createElement("li");
+                li.textContent = `Average ${idx + 1}: ${avg.toFixed(2)}`;
+                averageList.appendChild(li);
+            });
+        });
+    </script>
 </body>
 </html>
