--- a/schoolwork.html
+++ b/schoolwork.html
@@ -192,6 +192,17 @@
         <a href="WebProjects/Week6/6-4.html">Day 4</a>
         <a href="WebProjects/Week6/6-5.html">Day 5</a>
   </div>
+    </div>
+    <div class="sub-dropdown">
+      <button class="sub-dropbtn">Week 7</button>
+      <div class="sub-dropdown-content">
+        <a href="WebProjects/Week7/7-1.html">Day 1</a>
+        <a href="WebProjects/Week7/7-2.html">Day 2</a>
+        <a href="WebProjects/Week7/7-3Tally.html">Day 3</a>
+        <a href="WebProjects/Week7/7-4.html">Day 4</a>
+        <a href="WebProjects/Week7/7-5.html">Day 5</a>
+      </div>
+    </div>
 </div>
 
 </body>
