--- a/schoolwork.html
+++ b/schoolwork.html
@@ -203,6 +203,16 @@
         <a href="WebProjects/Week7/7-5.html">Day 5</a>
       </div>
     </div>
+    <div class ="sub-dropdown">
+      <button class ="sub-dropbtn">Week 8</button>
+      <div class="sub-dropdown-content">
+        <a href="WebProjects/Week8/8-1.html">Day 1</a>
+        <a href="WebProjects/Week8/8-2.html">Day 2</a>
+        <a href="WebProjects/Week8/8-3.html">Day 3</a>
+        <a href="WebProjects/Week8/8-4.html">Day 4</a>
+        <a href="WebProjects/Week8/8-5.html">Day 5</a>
+      </div>
+    </div>
 </div>
 
 </body>
