--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <td><img src="img/klent.png" alt=""></td>
         </tr>
         <tr>
-            <td>testtesttest</td>
-            <td>testtesttesttest</td>
+            <td><img src="img/neru.png" alt="YELLOW"></td>
+            <td><img src="img/pearto.png" alt="pearto"></td>
     </table>
 
   
