--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
             <td><img src="img/pearto.png" alt="pearto"></td>
     </table>
 
-  
+<img src="img/4kfreeman.png">
+
+    <br>
 
 <a href="https://davidfanclub.com/schoolwork.html" id="test">All my work!</a>
 
