--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <table id="DavidTable">
         <tr>
             <td><img src="img/mikumikubeam.png" alt="Miku"></td>
-            <td><img src="img/klent.png" alt=""></td>
+            <td><img src="img/nobgfreeman.png" alt=""></td>
         </tr>
         <tr>
             <td><img src="img/neru.png" alt="YELLOW"></td>
