--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
                 transition: background-color 0.5s, color 0.5s;
                 
             }
+
+            #freeman {
+                position: relative;
+                left: 600px;
+                top: 200px;
+                border: 5px solid rgb(0, 0, 0);
+                border-radius: 12px;
+                box-shadow: 4px 4px 10px rgb(0, 0, 0);
+            }
     </style>
 </head>
 <body>
@@ -145,9 +154,8 @@
             <td><img src="img/pearto.png" alt="pearto"></td>
     </table>
 
-<img src="img/4kfreeman.png">
+<img src="img/4kfreeman.png" id="freeman">
 
-    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>
 
 <a href="https://davidfanclub.com/schoolwork.html" id="test">All my work!</a>
 
