--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             background-image: url('img/downlad.png');
             background-repeat: no-repeat;
-            background-size: fill;
+            background-size: cover;
         }
         #beserker {
             border: 6px solid rgb(204, 17, 211);
