--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
         <tr>
             <td><img src="img/neru.png" alt="YELLOW"></td>
             <td><img src="img/pearto.png" alt="pearto"></td>
+        </tr>
+        <tr>
+            <td><img src="img/vril.png" alt="avery"></td>
+            <td><img src="img/alexzog.png" alt="charlie"></td>
+        </tr>
     </table>
 
 <img src="img/4kfreeman.png" id="freeman">
