--- a/schoolwork.html
+++ b/schoolwork.html
@@ -9,7 +9,7 @@
             position: relative;
             display: inline-block;
             margin-right: 20px;
-
+            bottom: 250px;
         }
         .dropbtn {
             background-color: #4CAF50;
@@ -120,7 +120,12 @@
             
         }
 
-
+        #vril {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 300px;
+        }
 
 
     </style>
@@ -129,8 +134,8 @@
 
 <h1 id="WorkHeader">This is the second webpage</h1>
 <a href="index.html" id="home">Go back to the first webpage</a>
-
-<br><br><br><br><br><br>
+<br>
+<img src="img/vril.png" alt="to" id="vril">
 
 <div class="dropdown">
   <button class="dropbtn">Select Week</button>
@@ -223,6 +228,15 @@
         <a href="WebProjects/Week9/9-5.html">Day 5</a>
       </div>
     </div>
+    <div class ="sub-dropdown">
+      <button class ="sub-dropbtn">Week 10</button>
+      <div class="sub-dropdown-content">
+        <a href="WebProjects/Week10/10-1.html">Day 1</a>
+        <a href="WebProjects/Week10/10-2.html">Day 2</a>
+        <a href="WebProjects/Week10/10-3.html">Day 3</a>
+        <a href="WebProjects/Week10/10-4.html">Day 4</a>
+        <a href="WebProjects/Week10/10-5.html">Day 5</a>
+      </div>
 </div>
 
 </body>
