--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         body {
             background-image: url('img/downlad.png');
-            background-repeat: no-repeat;
-            background-size: cover;
+            background-repeat: repeat;
+            background-size: contain;
         }
         #beserker {
             border: 6px solid rgb(204, 17, 211);
