--- a/schoolwork.html
+++ b/schoolwork.html
@@ -276,6 +276,17 @@
         <a href="WebProjects/Week10/10-4.html">Day 4</a>
         <a href="WebProjects/Week10/10-5.html">Day 5</a>
       </div>
+    </div>
+    <div class ="sub-dropdown">
+      <button class ="sub-dropbtn">week 11</button>
+      <div class ="sub-dropdown-content">
+        <a href="=WebProjects/Week11/11-1.html">Day 1</a>
+        <a href="WebProjects/Week11/11-2.html">Day 2</a>
+        <a href="WebProjects/Week11/11-3.html">Day 3</a>
+        <a href="WebProjects/Week11/11-4.html">Day 4</a>
+        <a href="WebProjects/Week11/11-5.html">Day 5</a>
+      </div>
+    </div>
 </div>
 
 
